添加了获取前台程序的判断，确保可使用android 4.4的版本

--- a/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
@@ -52,7 +52,16 @@
                 android:id="@+id/sv_popup_window_tosys"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                st:titleEx="跳转到系统安全设置界面(根据APP展示悬浮框需要打开用户统计)"
+                st:titleEx="系统安全设置界面(根据APP展示悬浮框需要打开用户统计)"
+                st:type="buttonB" />
+
+            <View style="@style/Interval" />
+
+            <com.wow.carlauncher.common.view.SetView
+                android:id="@+id/sv_popup_window_toxfk"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                st:titleEx="悬浮框权限设置页面"
                 st:type="buttonB" />
 
             <View style="@style/Interval" />
@@ -61,7 +70,7 @@
                 android:id="@+id/sv_popup_window_showapps"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                st:titleEx="浮动窗口展示APP选择"
+                st:titleEx="允许弹出悬浮框的APP"
                 st:type="buttonB" />
 
             <View style="@style/Interval" />
