--- a/WowCarLauncher/mobile/src/main/res/layout/activity_main.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="系统设置" />
+
+    <Button
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:visibility="gone" />
 </LinearLayout>
