--- a/WowCarLauncher/mobile/src/main/res/layout/activity_main.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_main.xml
@@ -28,6 +28,5 @@
         android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="test"
-        android:visibility="gone" />
+        android:text="新版桌面" />
 </LinearLayout>
