--- a/WowCarLauncher/mobile/src/main/res/values/colors.xml
+++ b/WowCarLauncher/mobile/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
     <color name="launch_color5">#ea6072</color>
 
     <color name="ncm_4_4_bg">#22000000</color>
+    <color name="launch_dock_bg">#66000000</color>
 </resources>
