准备添加高德地图车机版

--- a/WowCarLauncher/mobile/src/main/res/values/colors.xml
+++ b/WowCarLauncher/mobile/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
 
     <color name="ncm_4_4_bg">#22000000</color>
     <color name="launch_dock_bg">#99000000</color>
+    <color name="launch_quick_bg">#aa000000</color>
 </resources>
