--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_lanncher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_lanncher.xml
@@ -29,4 +29,12 @@
             android:layout_weight="1"
             android:text="去公司" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="导航"
+        android:textColor="@android:color/white"
+        app:layout_textSizePercent="8%h" />
 </com.zhy.android.percent.support.PercentRelativeLayout>
