高德导航插件，功能已经接入

--- a/WowCarLauncher/mobile/src/main/res/layout/dialog_input.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/dialog_input.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:selectableItemBackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingEnd="10dp"
+    android:paddingStart="10dp">
 
     <EditText
         android:id="@+id/et_input"
