--- a/WowCarLauncher/mobile/src/main/res/values/styles.xml
+++ b/WowCarLauncher/mobile/src/main/res/values/styles.xml
@@ -33,4 +33,16 @@
     </style>
 
     <style name="DialogMenuInterval" parent="Interval"></style>
+
+    <style name="PopupDialog" parent="android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.6</item>
+
+    </style>
 </resources>
