高德导航插件，功能已经接入

--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_lanncher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_lanncher.xml
@@ -4,17 +4,19 @@
     android:id="@+id/rl_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/l_item_bg_blue"
     android:clickable="true">
 
-    <com.wow.carlauncher.common.view.CustomImageView
-        android:id="@+id/iv_cover"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/gd_bg"
-        app:radius="5dp" />
+    <!--<com.wow.carlauncher.common.view.CustomImageView-->
+    <!--android:id="@+id/iv_cover"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:scaleType="centerCrop"-->
+    <!--android:background="@drawable/l_item_bg_transparent_black"-->
+    <!--app:radius="5dp" />-->
 
     <LinearLayout
+        android:id="@+id/ll_controller"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
@@ -45,7 +47,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="高德车机版"
-        app:layout_textSizePercent="8%h" />
+        android:text="高德车机版" />
+
+    <ImageView
+        android:id="@+id/iv_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 </com.zhy.android.percent.support.PercentRelativeLayout>
