--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_controller.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_controller.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -33,27 +34,6 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_lu"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="增大亮度" />
-
-        <Button
-            android:id="@+id/btn_ld"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="减小亮度" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <Button
             android:id="@+id/btn_jy"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -61,9 +41,33 @@
             android:text="静音" />
 
         <Button
+            android:id="@+id/btn_close_screen"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="关屏" />
     </LinearLayout>
+
+    <com.zhy.android.percent.support.PercentLinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_wifi"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="10dp"
+            app:layout_textSizePercent="20%h" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:padding="10dp"
+            android:text="蓝牙:"
+            app:layout_textSizePercent="20%h" />
+    </com.zhy.android.percent.support.PercentLinearLayout>
 </LinearLayout>
