--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_music_ncm_popup.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_music_ncm_popup.xml
@@ -26,7 +26,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/iv_plugin_music_pre"
             android:padding="5dp"
-            android:src="@drawable/l_bg_prew" />
+            android:src="@mipmap/ic_prev" />
 
         <ImageView
             android:id="@+id/iv_play"
@@ -35,7 +35,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/iv_plugin_music_play"
             android:padding="5dp"
-            android:src="@mipmap/play" />
+            android:src="@mipmap/ic_play" />
 
         <ImageView
             android:id="@+id/iv_next"
@@ -44,7 +44,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/iv_plugin_music_next"
             android:padding="5dp"
-            android:src="@drawable/l_bg_next" />
+            android:src="@mipmap/ic_next" />
     </com.zhy.android.percent.support.PercentLinearLayout>
 
     <ProgressBar
