--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_music_popup.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_music_popup.xml
@@ -32,7 +32,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/iv_plugin_music_pre"
             android:padding="5dp"
-            android:src="@drawable/l_bg_prew" />
+            android:src="@mipmap/ic_prev" />
 
         <ImageView
             android:id="@+id/iv_play"
@@ -41,7 +41,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/iv_plugin_music_play"
             android:padding="5dp"
-            android:src="@mipmap/play" />
+            android:src="@mipmap/ic_play" />
 
         <ImageView
             android:id="@+id/iv_next"
@@ -50,6 +50,6 @@
             android:layout_weight="1"
             android:contentDescription="@string/iv_plugin_music_next"
             android:padding="5dp"
-            android:src="@drawable/l_bg_next" />
+            android:src="@mipmap/ic_next" />
     </LinearLayout>
 </com.zhy.android.percent.support.PercentLinearLayout>
