--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_controller_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_controller_launcher.xml
@@ -59,15 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:padding="10dp"
-            app:layout_textSizePercent="20%h" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:padding="10dp"
-            android:text="蓝牙:"
             app:layout_textSizePercent="20%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
 </LinearLayout>
