--- a/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
@@ -109,6 +109,24 @@
                 st:type="buttonB" />
 
             <View style="@style/Interval" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="16dp"
+                android:paddingTop="16dp"
+                android:text="帮助"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp" />
+
+            <com.wow.carlauncher.common.view.SetView
+                android:id="@+id/sv_about"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                st:titleEx="关于"
+                st:type="buttonB" />
+
+            <View style="@style/Interval" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
