--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_launcher.xml
@@ -90,4 +90,50 @@
             android:layout_height="1dp"
             android:background="@drawable/l_bg_line1" />
     </FrameLayout>
+
+    <com.zhy.android.percent.support.PercentLinearLayout
+        android:id="@+id/ll_navi"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_heightPercent="25%w">
+
+        <com.zhy.android.percent.support.PercentLinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:layout_heightPercent="50%h">
+
+            <TextView
+                android:id="@+id/tv_dis"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|end"
+                android:paddingEnd="20dp"
+                android:text="500米后"
+                app:layout_textSizePercent="60%h" />
+
+            <TextView
+                android:id="@+id/tv_road"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|start"
+                android:paddingStart="20dp"
+                android:text="胶州路"
+                app:layout_textSizePercent="60%h" />
+        </com.zhy.android.percent.support.PercentLinearLayout>
+
+        <TextView
+            android:id="@+id/tv_msg"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:text="剩余20公里"
+            app:layout_heightPercent="50%h"
+            app:layout_textSizePercent="30%h" />
+    </com.zhy.android.percent.support.PercentLinearLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
