--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_music_qcm_popup.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_music_qcm_popup.xml
@@ -12,24 +12,12 @@
         android:alpha="0"
         android:orientation="horizontal" />
 
-    <com.wow.carlauncher.common.view.CustomImageView
-        android:id="@+id/iv_cover"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        app:radius="5dp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/l_item_bg_transparent_black" />
-
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/rl_bottom"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        app:layout_heightPercent="25%w">
+        app:layout_heightPercent="70%h">
 
         <com.zhy.android.percent.support.PercentLinearLayout
             android:id="@+id/ll_prew"
@@ -93,41 +81,17 @@
         android:progressDrawable="@drawable/l_music_progress" />
 
     <TextView
-        android:id="@+id/tv_artist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/pb_music"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/tv_time"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        android:lines="1"
-        android:paddingStart="20dp"
-        android:text="@string/music_album"
-        android:textColor="@android:color/white"
-        app:layout_textSizePercent="6%h" />
-
-    <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/tv_artist"
+        android:layout_height="match_parent"
+        android:layout_above="@id/pb_music"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:lines="1"
         android:paddingEnd="20dp"
         android:paddingStart="20dp"
         android:text="@string/music_name"
-        android:textColor="@android:color/white"
-        app:layout_textSizePercent="8%h" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text="QQ音乐"
-        android:textColor="@android:color/white"
-        app:layout_textSizePercent="10%h" />
+        android:textColor="@color/plugin_music_name"
+        app:layout_heightPercent="30%h"
+        app:layout_textSizePercent="15%h" />
 </com.zhy.android.percent.support.PercentRelativeLayout>
